--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "d3": "^7.9.0",
     "graphviz-react": "^1.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
