--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphviz-react": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-loader-spinner": "^6.1.6",
     "react-spinners": "^0.13.8"
   },
